--- a/index.html
+++ b/index.html
@@ -15,41 +15,40 @@
 </head>
 <body class="h-screen p-2 bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]" style="font-family: 'Roboto'; font-size: 18px;">
 <button id="topBar"class="hidden w-full z-50 text-left text-white px-5 py-3 h-12 fixed top-0 left-0" onclick="showCont('menuCont')">☰ Start Here</button>
-<div id="menuCont" class="hidden text-white w-full max-w-md p-2 mt-12 rounded-lg border-2 border-green-500"> <!-- bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]-->
-    <button class="btnDD" onclick="showCont('createCont')">Create</button>
-    <button class="btnDD" onclick="showCont('updCont')">Alter</button>
-    <button class="btnDD" onclick="showCont('finCont')">Financials</button>
-    <button class="btnDD" onclick="showCont('rptCont')">Report</button>
-    <button class="btnDD" onclick="logout()">Logout</button>
-    <button class="btnDD" onclick="showCont()">Home</button>
+<div id="menuCont" class="hidden text-white w-full max-w-md p-2 mt-12 rounded-lg border-2 border-green-500">
+    <button class="btnDD" onclick="showCont('createCont')">👔 Create</button>
+    <button class="btnDD" onclick="showCont('updCont')">✏️ Alter</button>
+    <button class="btnDD" onclick="showCont('finCont')">💵 Financials</button>
+    <button class="btnDD" onclick="showCont('rptCont')">📊 Report</button>
+    <button class="btnDD" onclick="logout()">🔐 Logout</button>
+    <button class="btnDD" onclick="showCont()">🏚️ Home</button>
 </div>
-
-<div id ="createCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500"> <!-- bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]-->
-    <button id=1 class="btnDD" onclick="changeLists()">Ledger</button>
-    <button id=2 class="btnDD" onclick="changeLists()">Product</button>
-    <button id=3 class="btnDD" onclick="showEle(301,302,303,304,305,306,307,3010)">Transaction</button>
+<div id ="createCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500">
+    <button id=1 class="btnDD" onclick="changeLists()">🧑‍🚒 Ledger</button>
+    <button id=2 class="btnDD" onclick="changeLists()">📦 Product</button>
+    <button id=3 class="btnDD" onclick="showEle(301,302,303,304,305,306,307,3010)">🛒 Transaction</button>
 </div>
-<div id ="updCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500"> <!-- bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]-->
-    <button id=11 class="btnDD" onclick="insertProdLed('Opening Balance', false)">Update Ledger</button>
-    <button id=12 class="btnDD" onclick="insertProdLed('Opening Stock', false)">Update Product</button>
-    <button id=13 class="btnDD" onclick="insertTran(true, true, false, false)">Update Transaction</button>
+<div id ="updCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500">
+    <button id=11 class="btnDD" onclick="insertProdLed('Opening Balance', false)">✏️ Update Ledger</button>
+    <button id=12 class="btnDD" onclick="insertProdLed('Opening Stock', false)">✏️ Update Product</button>
+    <button id=13 class="btnDD" onclick="insertTran(true, true, false, false)">⛔✏️ Update Transaction</button>
 </div>
-<div id ="finCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500"> <!-- bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]-->
-    <button id=21 class="btnDD" onclick="viewSummary('receivables')">Receivables</button>
-    <button id=22 class="btnDD" onclick="viewSummary('payables')">Payables</button>
-    <button id=23 class="btnDD" onclick="showCont('plCont')">Profit & Loss</button>
-    <button id=25 class="btnDD" onclick="alert('Under Construction! Coming Soooooooon')">Khatavahi</button>
+<div id ="finCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500">
+    <button id=21 class="btnDD" onclick="viewSummary('receivables')">💰 Receivables</button>
+    <button id=22 class="btnDD" onclick="viewSummary('payables')">💸 Payables</button>
+    <button id=23 class="btnDD" onclick="showCont('plCont')">📈 Profit & Loss</button>
+    <button id=25 class="btnDD" onclick="alert('Under Construction! Coming Soooooooon')">❓ Khatavahi</button>
 </div>
-<div id ="rptCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500"> <!-- bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]-->
-    <button id=31 class="btnDD" onclick="insertTran(false, false, false, false)">Daybook</button>
-    <button id=32 class="btnDD" onclick="insertTran(false, false, false, true)">CashBook</button>
-    <button id=33 class="btnDD" onclick="viewSummary('sales')">Sales Register</button>
-    <button id=34 class="btnDD" onclick="viewSummary('purchase')">Purchase Register</button>
-    <button id=35 class="btnDD" onclick="insertProdLed('Opening Balance', true)">Ledgers & Groups</button>
-    <button id=36 class="btnDD" onclick="insertProdLed('Opening Stock', true)">Products & Groups</button>
-    <button id=37 class="btnDD" onclick="showDashboard()">Dashboard</button>
+<div id ="rptCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500">
+    <button id=31 class="btnDD" onclick="insertTran(false, false, false, false)">📘 Daybook</button>
+    <button id=32 class="btnDD" onclick="insertTran(false, false, false, true)">📜 CashBook</button>
+    <button id=33 class="btnDD" onclick="viewSummary('sales')">🗓️ Sales Register</button>
+    <button id=34 class="btnDD" onclick="viewSummary('purchase')">🗓️ Purchase Register</button>
+    <button id=35 class="btnDD" onclick="insertProdLed('Opening Balance', true)">👯‍♀️ Ledgers & Groups</button>
+    <button id=36 class="btnDD" onclick="insertProdLed('Opening Stock', true)">👯‍♀️ Products & Groups</button>
+    <button id=37 class="btnDD" onclick="showDashboard()">📊 Dashboard</button>
 </div>
-<div id ="eleCont" class="hidden w-full max-w-md p-2 mt-12 text-white rounded-lg border-2 border-green-500"> <!-- bg-[radial-gradient(circle_at_80%_10%,#0b41e0,#f0717b)]-->
+<div id ="eleCont" class="hidden w-full max-w-md p-2 mt-12 rounded-lg border-2 border-green-500">
     <input id=101 class="input-box" type="text"/><label class="label">Select Group</label>
     <input id=102 class="input-box" type="text"/><label class="label">Name</label>
     <input id=103 class="input-box" type="number"/><label class="label">Opening Balance/Stock</label>
@@ -76,7 +75,6 @@
     <button onclick="profit_loss()" title="view profit_loss" class="inline-flex w-10 h-10 rounded-full items-center justify-center ring-green-500 hover:ring-4 transition">🔍</button>
     <div id="plLabels" class="max-w-md mx-auto mt-4 border rounded-lg divide-y"></div>
 </div>
-
 <div id="tblCont" class="hidden w-fit mt-[50px] rounded-lg p-1 space-y-2 border border-green-600">
     <div><input id="searchBox" class="w-fit px-2 h-10 border border-green-600 rounded" placeholder="Search..." type="text" autocomplete="off"/></div>
     <div class="w-fit flex gap-8 ml-5 justify-start">
@@ -86,9 +84,7 @@
     </div>
     <div id="table" class="rounded-lg border border-green-600 mx-auto text-[18px] font-[Roboto]"></div>
 </div>
-
-<div id="dashboard" class="hidden w-full max-w-md mt-[50px] ml-1 text-white"><h2>Dashboard</h2><canvas id="dashboardChart"></canvas></div>
-
+<div id="dashCont" class="hidden w-full max-w-md mt-[50px] ml-1 text-white"><h2>Dashboard</h2><canvas id="dashboardChart"></canvas></div>
 <div id="lgnCont" class="hidden max-w-md p-2 mt-[50px] rounded bg-white">
     <input class="input-box" id="loginEmail" type="email" /><label for="loginEmail" class="label">Email</label>
     <input class="input-box" id="loginPassword" type="password" /><label for="loginPassword" class="label">Password</label>
@@ -136,8 +132,8 @@
 
     document.addEventListener('DOMContentLoaded', () => {
         const wrapperClass = "relative mt-6";
-        const inputClass = "peer w-full bg-transparent border-b-2 border-gray-400 pt-2 focus:outline-none focus:border-green-600";
-        const labelClass = "absolute top-2 left-0 -translate-y-6 peer-placeholder-shown:translate-y-0 peer-focus:text-green-600 text-gray-400";
+        const inputClass = "peer w-full bg-transparent text-white border-b-2 border-gray-400 pt-2 focus:outline-none focus:border-green-600";
+        const labelClass = "absolute top-2 left-0 text-gray-500 -translate-y-6 peer-placeholder-shown:translate-y-0 peer-focus:text-green-600";
 
         document.querySelectorAll('.input-box').forEach(input => {
             const label = input.nextElementSibling;
@@ -165,7 +161,7 @@
         });
     });
 
-    const btnClass1 = "block w-full max-w-md px-2 py-3 text-left cursor-pointer hover:bg-blue-600 hover:text-white rounded";
+    const btnClass1 = "block w-full max-w-md px-2 py-3 text-left cursor-pointer hover:bg-blue-600 border-b-2 border-green-300 last:border-b-0";
     document.querySelectorAll('.btnDD').forEach(btn => { btn.classList.add(...btnClass1.split(' ')); });
     const btnClass2 = "w-[50px] h-[50px] rounded-full text-white text-[20px] font-bold bg-[radial-gradient(circle_at_25%_20%,#6dd5fa,#003366)] shadow-[0_8px_15px_rgba(0,0,0,0.4)] transition-transform duration-500 hover:scale-125 hover:shadow-[0_12px_25px_rgba(0,0,0,0.6)]";
     document.querySelectorAll('.btnSV').forEach(btn => { btn.classList.add(...btnClass2.split(' ')); });
@@ -192,7 +188,7 @@
     };
 
     window.showCont = function (...idToShow) {
-        const allIds = ['menuCont', 'createCont', 'updCont', 'finCont', 'rptCont', 'eleCont', '1010', '3010', 'plCont', 'tblCont', 'dashboard', 'lgnCont'];
+        const allIds = ['menuCont', 'createCont', 'updCont', 'finCont', 'rptCont', 'eleCont', '1010', '3010', 'plCont', 'tblCont', 'dashCont', 'lgnCont'];
         allIds.forEach(id => { clear(); const el = document.getElementById(id); if (el) { el.classList.add("hidden"); el.style.setProperty('display', 'none', 'important'); } });
         idToShow.forEach(id => { const el = document.getElementById(id); if (el) { el.classList.remove("hidden"); el.style.setProperty('display', 'block', 'important'); } }); 
     };
@@ -243,7 +239,7 @@
             wrapper.appendChild(inputElement);
         }
         let dropdown = document.createElement("ul");
-        dropdown.className = "absolute z-50 w-full h-[500px] overflow-y-auto hidden rounded-b bg-[radial-gradient(circle_at_80%_20%,#b34515,#096103)]";
+        dropdown.className = "absolute z-50 w-full h-[500px] text-white overflow-y-auto hidden rounded-b bg-[radial-gradient(circle_at_80%_20%,#b34515,#096103)]";
         wrapper.appendChild(dropdown);
         function filterList() {
             const search = inputElement.value.toLowerCase();
@@ -432,8 +428,8 @@
     };
     window.changeLists = function () {
         const text = event.target.textContent;
-        if (text === "Ledger") {showEle(101,102,103,104,105,1010); attachDropdown(document.getElementById("101"), ["Angadiya", "Bank", "Cash", "Creditors", "Debitors", "Expense"]);}
-        if (text === "Product") {showEle(101,102,103,104,105,1010); attachDropdown(document.getElementById("101"), ["Sproducts", "Pproducts"]);}
+        if (text === "🧑‍🚒 Ledger") {showEle(101,102,103,104,105,1010); attachDropdown(document.getElementById("101"), ["Angadiya", "Bank", "Cash", "Creditors", "Debitors", "Expense"]);}
+        if (text === "📦 Product") {showEle(101,102,103,104,105,1010); attachDropdown(document.getElementById("101"), ["Sproducts", "Pproducts"]);}
     
         if (document.getElementById("301").value === "Sales") {
             attachDropdown(document.getElementById("303"), window.sproduct_list);
@@ -506,24 +502,24 @@
     window.insertProdLed = async function (type, viewOnly = false) {
         const allData = await window.fetchAllOnce();
         const rows = [];
-        allData.forEach((data) => { if (data.ttype === type) { rows.push({ id: data.id, ttype: data.ttype, amt: data.amt || "", nar: data.nar || "", name: data.name || "", grp: data.grp || "", }); }; });
+        allData.forEach((data) => { if (data.ttype === type) { rows.push({ id: data.id, ttype: data.ttype, amt: data.amt || "", nar: data.nar || "", name: data.name || "", grp: data.grp || "", baltype: data.baltype || "", }); }; });
         const columns = [ {title: "Group", field: "grp"}, {title: "Name", field: "name"}, {title: "Amount", field: "amt", hozAlign: "right"}, {title: "Narration", field: "nar"}, ];
         createEditableTable(rows, columns, false, !viewOnly, false);
     };
 
     window.saveProdLed = async function () {
-        let amt, oldName = null;
+        let oldName = null;
         const isProductGroup = (g) => g === "Sproducts" || g === "Pproducts";
         const group = document.getElementById("101").value.trim();
         const newName = document.getElementById("102").value.trim();
         const amtValue = document.getElementById("103").value.trim();
         const balType = document.getElementById("104").value.trim();
         const nar = document.getElementById("105").value.trim(); 
-        
+        let amt = amtValue ? parseFloat(amtValue) : undefined;
+
         const docId = currentDocId;
         if (!group || !newName) { return alert("Group and Name are required. 👨‍👨‍👦‍👦 🧾"); }
-        if (amtValue.trim() !== "") { if (balType !== "Credit" && balType !== "Debit") { return alert("If amount is entered, Balance Type must be Credit or Debit. 💰"); } }
-
+        if (amt !== undefined) { if (balType !== "Credit" && balType !== "Debit") { return alert("If amount is entered, Balance Type must be Credit or Debit. 💰"); } }
         if (docId) { const existingDoc = cachedData.find(d => d.id === docId); oldName = existingDoc ? existingDoc.name : ""; }
         if (!docId || (docId && newName !== oldName)) {
             const exists = cachedData.some(d => d.name === newName);
@@ -536,16 +532,16 @@
                 dataObj.amt = amt;
                 if (balType === "Credit") { dataObj.fparty = newName; } 
                 else if (balType === "Debit") { dataObj.tparty = newName; } 
-            } 
+            }
         };
 
         if (docId) {
             const updateObj = { grp: group, name: newName, ttype: ttype };
             if (amt !== undefined) updateObj.amt = amt;
-            updateObj.nar = nar ? nar : deleteField();
+            if (nar) updateObj.nar = nar; else updateObj.nar = deleteField();
 
             if (balType === "Credit") { updateObj.fparty = newName; updateObj.tparty = deleteField(); } 
-            else if (balType === "Debit") { updateObj.tparty = newName; updateObj.fparty = deleteField(); } 
+            else if (balType === "Debit") { updateObj.tparty = newName; updateObj.fparty = deleteField(); }
             else { updateObj.fparty = deleteField(); updateObj.tparty = deleteField(); }
 
             await updateDoc(doc(tranCol, docId), updateObj);
@@ -561,6 +557,7 @@
                 if (shouldUpdate) { batch.update(doc(tranCol, data.id), updates); Object.assign(data, updates); }
             });
             await batch.commit();
+
         } else {
             const newDocData = { grp: group, name: newName, ttype: ttype };
             if (nar) newDocData.nar = nar;
@@ -569,8 +566,7 @@
             const docRef = await addDoc(tranCol, newDocData);
             cachedData.push({ id: docRef.id, ...newDocData });
         }
-        clear();
-        currentDocId = null; 
+        clear(); currentDocId = null; 
     };
 
     window.viewSummary = async function (mode = "receivables") {
@@ -648,7 +644,7 @@
     };
 
     window.showDashboard = async function () {
-        showCont("dashboard");
+        showCont("dashCont");
         const allData = await fetchAllOnce();
         const monthlyData = {};
 
@@ -693,7 +689,7 @@
         if (docSnap.exists() && docSnap.data().approved === true) { showCont("topBar"); }
     };
 
-    //window.addEventListener("beforeunload", function (e) { e.preventDefault(); e.returnValue = ""; });
+    window.addEventListener("beforeunload", function (e) { e.preventDefault(); e.returnValue = ""; });
 </script>
 </body>
 </html>
