--- a/index.html
+++ b/index.html
@@ -75,20 +75,23 @@
     <button onclick="profit_loss()" title="view profit_loss" class="inline-flex w-10 h-10 rounded-full items-center justify-center ring-green-500 hover:ring-4 transition">🔍</button>
     <div id="plLabels" class="max-w-md mx-auto mt-4 border rounded-lg divide-y"></div>
 </div>
-<div id="tblCont" class="hidden w-fit mt-[50px] rounded-lg p-1 space-y-2 border border-green-600">
-    <div><input id="searchBox" class="w-fit px-2 h-10 border border-green-600 rounded" placeholder="Search..." type="text" autocomplete="off"/></div>
-    <div class="w-fit flex gap-8 ml-5 justify-start">
+<div id="tblCont" class="hidden w-full mt-[50px] rounded-lg p-1 space-y-2 border border-green-600">
+    <div><input id="searchBox" class="w-full px-2 h-10 border border-green-600 rounded" placeholder="Search..." type="text" autocomplete="off"/></div>
+    <div class="w-full flex gap-8 ml-5 justify-start">
         <button id="excelBtn" class="w-10 h-10 flex text-white items-center justify-center rounded-full ring-green-500 hover:ring-4 transition">XL</button>
         <button id="pdfBtn" class="w-10 h-10 flex text-white items-center justify-center rounded-full ring-green-500 hover:ring-4 transition">PDF</button>
         <button id="printBtn" class="w-10 h-10 flex items-center justify-center rounded-full ring-green-500 hover:ring-4 transition">🖨️</button>
     </div>
-    <div id="table" class="rounded-lg border border-green-600 mx-auto text-[18px] font-[Roboto]"></div>
+    <div id="table" class="w-full rounded-lg border border-green-600 mx-auto text-[18px] font-[Roboto]"></div>
 </div>
 <div id="dashCont" class="hidden w-full max-w-md mt-[50px] ml-1 text-white"><h2>Dashboard</h2><canvas id="dashboardChart"></canvas></div>
-<div id="lgnCont" class="hidden max-w-md p-2 mt-[50px] rounded bg-white">
+<div id="lgnCont" class="hidden max-w-md p-2 mt-[50px] rounded-lg border border-green-600">
     <input class="input-box" id="loginEmail" type="email" /><label for="loginEmail" class="label">Email</label>
     <input class="input-box" id="loginPassword" type="password" /><label for="loginPassword" class="label">Password</label>
-    <button class="btnSV block mx-auto mt-5" title="Login" onclick="login()">🏠︎</button>
+    <div class="p-2 mt-2 w-[200px] rounded-full h-[65px] space-x-[78px] bg-[radial-gradient(circle_at_60%_30%,#5eead4,#003366)]">
+        <button class="btnSV" title="Login" onclick="login()">🏠︎</button>
+    </div>
+    
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script><script> flatpickr(".date-input", { dateFormat: "d-m-Y", defaultDate: new Date() }); </script>
@@ -327,7 +330,7 @@
 
         window.table = new Tabulator(document.getElementById('table'), {
             data: rows,
-            layout: "fitDataTable",
+            layout: "fitDataFill",
             reactiveData: true,
             rowHeight: 40,
             maxHeight: "600px",
@@ -467,10 +470,10 @@
         const columns = [
             {title: "Type", field: "ttype"}, 
             {title: "Date", field: "date"}, 
-            {title: "From Party", field: "fparty"}, 
-            {title: "To Party", field: "tparty"}, 
-            {title: "Narration", field: "nar"}, 
+            {title: "From", field: "fparty"}, 
+            {title: "To", field: "tparty"}, 
             {title: "Amount", field: "amt", hozAlign: "right"}, 
+            {title: "Narration", field: "nar"}, 
         ];
         createEditableTable(rows, columns, showDelete, showUpdate, editable);
     };
