--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator.min.css" rel="stylesheet">
 </head>
-<body class="h-screen p-2 bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]" style="font-family: 'Roboto'; font-size: 18px;">
+<body class="h-screen p-1 bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]" style="font-family: 'Roboto'; font-size: 18px;">
 <button id="topBar"class="hidden w-full z-50 text-left text-white px-5 py-3 h-12 fixed top-0 left-0" onclick="showCont('menuCont')">☰ Start Here</button>
 <div id="menuCont" class="hidden text-white w-full max-w-md p-2 mt-12 rounded-lg border-2 border-green-500">
     <button class="btnDD" onclick="showCont('createCont')">👔 Create</button>
@@ -70,13 +70,13 @@
     <button class="btnSV" onclick="saveTransaction()">💾</button>
     <button class="btnSV" title="View Daybook" onclick="insertTran(true, true, false)">📖</button>
 </div>
-<div id="plCont" class="hidden w-fit mt-[50px] flex items-center gap-2 p-1 rounded-lg border border-green-600">
-    <input id="clostk" type="number" placeholder="Closing Stock" class="border border-green-600 rounded px-2 h-10 w-50 inline-block" />
-    <button onclick="profit_loss()" title="view profit_loss" class="inline-flex w-10 h-10 rounded-full items-center justify-center ring-green-500 hover:ring-4 transition">🔍</button>
+<div id="plCont" class="hidden w-full max-w-md mt-[50px] flex items-center gap-2 p-1 rounded-lg border border-green-600">
+    <input id="clostk" type="number" placeholder="Closing Stock" class="border border-green-600 rounded px-2 h-10 inline-block" />
+    <button onclick="profit_loss()" title="view profit_loss" class="text-[30px] inline-flex h-10 rounded-full items-center justify-center ring-green-500 hover:ring-4 transition">🔍</button>
     <div id="plLabels" class="max-w-md mx-auto mt-4 border rounded-lg divide-y"></div>
 </div>
-<div id="tblCont" class="hidden w-full mt-[50px] rounded-lg p-1 space-y-2 border border-green-600">
-    <div><input id="searchBox" class="w-full px-2 h-10 border border-green-600 rounded" placeholder="Search..." type="text" autocomplete="off"/></div>
+<div id="tblCont" class="hidden w-full mt-[50px] rounded-lg p-1 space-y-2 border border-green-500">
+    <div><input id="searchBox" class="w-full px-2 h-10 border border-green-500 rounded" placeholder="Search..." type="text" autocomplete="off"/></div>
     <div class="w-full flex gap-8 ml-5 justify-start">
         <button id="excelBtn" class="w-10 h-10 flex text-white items-center justify-center rounded-full ring-green-500 hover:ring-4 transition">XL</button>
         <button id="pdfBtn" class="w-10 h-10 flex text-white items-center justify-center rounded-full ring-green-500 hover:ring-4 transition">PDF</button>
