--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator.min.css" rel="stylesheet">
 </head>
 <body class="h-screen p-1 bg-[radial-gradient(circle_at_70%_20%,#d428a3,#003366)]" style="font-family: 'Roboto'; font-size: 18px;">
-<button id="topBar"class="hidden w-full z-50 text-left text-white px-5 py-3 h-12 fixed top-0 left-0" onclick="showCont('menuCont')">☰ Start Here</button>
-<div id="menuCont" class="hidden text-white w-full max-w-md p-2 mt-12 rounded-lg border-2 border-green-500">
+<button id="topBar"class="hidden w-full z-50 text-left text-white px-5 py-3 h-12 fixed top-0 left-0 shadow-lg" onclick="showCont('menuCont')">☰ Start Here</button>
+<div id="menuCont" class="hidden text-white w-full max-w-md p-2 mt-12 rounded-lg shadow-xl">
     <button class="btnDD" onclick="showCont('createCont')">👔 Create</button>
     <button class="btnDD" onclick="showCont('updCont')">✏️ Alter</button>
     <button class="btnDD" onclick="showCont('finCont')">💵 Financials</button>
@@ -23,23 +23,23 @@
     <button class="btnDD" onclick="logout()">🔐 Logout</button>
     <button class="btnDD" onclick="showCont()">🏚️ Home</button>
 </div>
-<div id ="createCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500">
+<div id ="createCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg shadow-xl">
     <button id=1 class="btnDD" onclick="changeLists()">🧑‍🚒 Ledger</button>
     <button id=2 class="btnDD" onclick="changeLists()">📦 Product</button>
-    <button id=3 class="btnDD" onclick="showEle(301,302,303,304,305,306,307,3010)">🛒 Transaction</button>
+    <button id=3 class="btnDD" onclick="showEle(301,302,303,304,305,105,3010)">🛒 Transaction</button>
 </div>
-<div id ="updCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500">
+<div id ="updCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg shadow-xl">
     <button id=11 class="btnDD" onclick="insertProdLed('Opening Balance', false)">✏️ Update Ledger</button>
     <button id=12 class="btnDD" onclick="insertProdLed('Opening Stock', false)">✏️ Update Product</button>
     <button id=13 class="btnDD" onclick="insertTran(true, true, false, false)">⛔✏️ Update Transaction</button>
 </div>
-<div id ="finCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500">
+<div id ="finCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg shadow-xl">
     <button id=21 class="btnDD" onclick="viewSummary('receivables')">💰 Receivables</button>
     <button id=22 class="btnDD" onclick="viewSummary('payables')">💸 Payables</button>
     <button id=23 class="btnDD" onclick="showCont('plCont')">📈 Profit & Loss</button>
     <button id=25 class="btnDD" onclick="alert('Under Construction! Coming Soooooooon')">❓ Khatavahi</button>
 </div>
-<div id ="rptCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg border-2 border-green-500">
+<div id ="rptCont" class="hidden w-full max-w-md text-white p-2 mt-12 rounded-lg shadow-xl">
     <button id=31 class="btnDD" onclick="insertTran(false, false, false, false)">📘 Daybook</button>
     <button id=32 class="btnDD" onclick="insertTran(false, false, false, true)">📜 CashBook</button>
     <button id=33 class="btnDD" onclick="viewSummary('sales')">🗓️ Sales Register</button>
@@ -48,7 +48,7 @@
     <button id=36 class="btnDD" onclick="insertProdLed('Opening Stock', true)">👯‍♀️ Products & Groups</button>
     <button id=37 class="btnDD" onclick="showDashboard()">📊 Dashboard</button>
 </div>
-<div id ="eleCont" class="hidden w-full max-w-md p-2 mt-12 rounded-lg border-2 border-green-500">
+<div id ="eleCont" class="hidden w-full max-w-md p-2 mt-12 rounded-lg shadow-xl">
     <input id=101 class="input-box" type="text"/><label class="label">Select Group</label>
     <input id=102 class="input-box" type="text"/><label class="label">Name</label>
     <input id=103 class="input-box" type="number"/><label class="label">Opening Balance/Stock</label>
@@ -60,32 +60,31 @@
     <input id=303 class="input-box" type="text"/><label class="label">From</label>
     <input id=304 class="input-box" type="text"/><label class="label">To</label>
     <input id=305 class="input-box" type="number"/><label class="label">Amount</label>
-    <input id=306 class="input-box mb-[50px]" type="text"/><label class="label">Narration</label>
 </div>
-<div id=1010 class="hidden p-2 mt-2 w-fit rounded-full h-[65px] space-x-[78px] bg-[radial-gradient(circle_at_60%_20%,#5eead4,#003366)]">
+<div id=1010 class="hidden p-2 mt-2 w-fit rounded-full h-[65px] space-x-[78px] bg-[radial-gradient(circle_at_50%_20%,#003366,#d428a3)] shodow-2xl">
     <button class="btnSV" onclick="saveProdLed()">💾</button>
     <button class="btnSV" title="Back" onclick="alert('Under Construction 🏗️\nBy\nL&T 👷🏼')">➤</button>
 </div>
-<div id=3010 class="hidden p-2 mt-2 w-fit rounded-full h-[65px] space-x-[78px] bg-[radial-gradient(circle_at_60%_30%,#5eead4,#003366)]">
+<div id=3010 class="hidden p-2 mt-2 w-fit rounded-full h-[65px] space-x-[78px] bg-[radial-gradient(circle_at_50%_20%,#003366,#d428a3)] shodow-2xl">
     <button class="btnSV" onclick="saveTransaction()">💾</button>
     <button class="btnSV" title="View Daybook" onclick="insertTran(true, true, false)">📖</button>
 </div>
-<div id="plCont" class="hidden w-full max-w-md mt-[50px] flex items-center gap-2 p-1 rounded-lg border border-green-600">
-    <input id="clostk" type="number" placeholder="Closing Stock" class="border border-green-600 rounded px-2 h-10 inline-block" />
-    <button onclick="profit_loss()" title="view profit_loss" class="text-[30px] inline-flex h-10 rounded-full items-center justify-center ring-green-500 hover:ring-4 transition">🔍</button>
+<div id="plCont" class="hidden w-full max-w-md mt-[50px] flex items-center gap-2 p-1 rounded-lg shadow-xl">
+    <input id="clostk" type="number" placeholder="Enter Closing Stock" class="bg-transparent text-white border border-green-600 rounded px-2 h-10 inline-block" />
+    <button onclick="profit_loss()" title="view profit_loss" class="btnSV">⏳</button>
     <div id="plLabels" class="max-w-md mx-auto mt-4 border rounded-lg divide-y"></div>
 </div>
-<div id="tblCont" class="hidden w-full mt-[50px] rounded-lg p-1 space-y-2 border border-green-500">
-    <div><input id="searchBox" class="w-full px-2 h-10 border border-green-500 rounded" placeholder="Search..." type="text" autocomplete="off"/></div>
-    <div class="w-full flex gap-8 ml-5 justify-start">
-        <button id="excelBtn" class="w-10 h-10 flex text-white items-center justify-center rounded-full ring-green-500 hover:ring-4 transition">XL</button>
-        <button id="pdfBtn" class="w-10 h-10 flex text-white items-center justify-center rounded-full ring-green-500 hover:ring-4 transition">PDF</button>
-        <button id="printBtn" class="w-10 h-10 flex items-center justify-center rounded-full ring-green-500 hover:ring-4 transition">🖨️</button>
+<div id="tblCont" class="hidden w-full mt-[50px] rounded-lg p-1 space-y-2 shadow-xl">
+    <div><input id="searchBox" class="px-2 h-10 bg-transparent text-white border border-green-600 rounded" placeholder="Search..." type="text" autocomplete="off"/></div>
+    <div class="w-fit flex gap-8 p-2 justify-start rounded-full h-[65px] bg-[radial-gradient(circle_at_60%_20%,#003366,#5eead4)]">
+        <button id="excelBtn" class="btnSV">XL</button>
+        <button id="pdfBtn" class="btnSV">PDF</button>
+        <button id="printBtn" class="btnSV">🖨️</button>
     </div>
     <div id="table" class="w-full rounded-lg border border-green-600 mx-auto text-[18px] font-[Roboto]"></div>
 </div>
-<div id="dashCont" class="hidden w-full max-w-md mt-[50px] ml-1 text-white"><h2>Dashboard</h2><canvas id="dashboardChart"></canvas></div>
-<div id="lgnCont" class="hidden max-w-md p-2 mt-[50px] rounded-lg border border-green-600">
+<div id="dashCont" class="hidden w-full max-w-md mt-[50px] ml-1 text-white rounded-lg shadow-xl"><h2>Dashboard</h2><canvas id="dashboardChart"></canvas></div>
+<div id="lgnCont" class="hidden max-w-md p-2 mt-[50px] rounded-lg  shadow-xl">
     <input class="input-box" id="loginEmail" type="email" /><label for="loginEmail" class="label">Email</label>
     <input class="input-box" id="loginPassword" type="password" /><label for="loginPassword" class="label">Password</label>
     <div class="p-2 mt-2 w-[200px] rounded-full h-[65px] space-x-[78px] bg-[radial-gradient(circle_at_60%_30%,#5eead4,#003366)]">
@@ -134,14 +133,17 @@
     };
 
     document.addEventListener('DOMContentLoaded', () => {
+        const btnClass1 = "block w-full max-w-md px-2 py-3 text-left cursor-pointer hover:bg-blue-600 border-b-2 border-green-300 last:border-b-0";
+        document.querySelectorAll('.btnDD').forEach(btn => { btn.classList.add(...btnClass1.split(' ')); });
+        const btnClass2 = "w-[50px] h-[50px] rounded-full text-white text-[20px] font-bold bg-[radial-gradient(circle_at_25%_20%,#6dd5fa,#003366)] shadow-[0_8px_15px_rgba(0,0,0,0.4)] transition-transform duration-500 hover:scale-150 hover:shadow-[0_12px_25px_rgba(0,0,0,0.6)]";
+        document.querySelectorAll('.btnSV').forEach(btn => { btn.classList.add(...btnClass2.split(' ')); });
         const wrapperClass = "relative mt-6";
         const inputClass = "peer w-full bg-transparent text-white border-b-2 border-gray-400 pt-2 focus:outline-none focus:border-green-600";
-        const labelClass = "absolute top-2 left-0 text-gray-500 -translate-y-6 peer-placeholder-shown:translate-y-0 peer-focus:text-green-600";
+        const labelClass = "absolute top-2 left-0 text-gray-400 -translate-y-6 peer-placeholder-shown:translate-y-0 peer-focus:text-green-600";
 
         document.querySelectorAll('.input-box').forEach(input => {
             const label = input.nextElementSibling;
             if (!label || label.tagName !== "LABEL") return;
-
             const wrapper = document.createElement("div");
             wrapper.className = wrapperClass;
             input.parentNode.insertBefore(wrapper, input);
@@ -164,25 +166,20 @@
         });
     });
 
-    const btnClass1 = "block w-full max-w-md px-2 py-3 text-left cursor-pointer hover:bg-blue-600 border-b-2 border-green-300 last:border-b-0";
-    document.querySelectorAll('.btnDD').forEach(btn => { btn.classList.add(...btnClass1.split(' ')); });
-    const btnClass2 = "w-[50px] h-[50px] rounded-full text-white text-[20px] font-bold bg-[radial-gradient(circle_at_25%_20%,#6dd5fa,#003366)] shadow-[0_8px_15px_rgba(0,0,0,0.4)] transition-transform duration-500 hover:scale-125 hover:shadow-[0_12px_25px_rgba(0,0,0,0.6)]";
-    document.querySelectorAll('.btnSV').forEach(btn => { btn.classList.add(...btnClass2.split(' ')); });
-    
     window.showEle = function (...ids) {
-        showCont('eleCont')
+        showCont('eleCont');
         const cont = document.getElementById("eleCont");
-        Array.from(cont.children).forEach(child  => child.style.setProperty('display', 'none', 'important'));
+        Array.from(cont.children).forEach(child => child.style.setProperty('display', 'none', 'important') );
         let firstFocusable = null;
         ids.forEach(id => {
             let el = document.getElementById(id);
-            if (el) { 
-                if (el.tagName === "INPUT" || el.tagName === "LABEL") { el = el.parentElement;}
-                el.style.setProperty('display', 'block', 'important');
-                if (!firstFocusable) { firstFocusable = el.querySelector("input, select, textarea, button"); }
-            }
+            if (!el) return;
+            if (el.tagName === "INPUT" || el.tagName === "LABEL") { el = el.parentElement; }
+            cont.appendChild(el);
+            el.style.setProperty('display', 'block', 'important');
+            if (!firstFocusable) { firstFocusable = el.querySelector("input, select, textarea, button"); }
         });
-        if (firstFocusable) { requestAnimationFrame(() => { firstFocusable.focus(); }); }
+        if (firstFocusable) { requestAnimationFrame(() => firstFocusable.focus()); }
     };
 
     window.clear = function () {
@@ -230,7 +227,7 @@
         window.crdbcsbkang_list = [...crdbcsbkangSet].sort((a, b) => a.localeCompare(b));
         window.crdbcsbkangexp_list = [...crdbcsbkangexpSet].sort((a, b) => a.localeCompare(b)); 
         attachDropdown(document.getElementById("104"), ["Credit", "Debit"]);
-        attachDropdown(document.getElementById("301"), ["Sales", "Purchase", "Receipt", "Payment"]);
+        attachDropdown(document.getElementById("301"), ["Sales", "Purchase", "Receipt", "Payment", "Expense"]);
     };
     window.attachDropdown = function (inputElement, dataList) {
         if (inputElement._dropdownCleanup) { inputElement._dropdownCleanup(); }
@@ -417,13 +414,13 @@
             case "Purchase":
             case "Receipt":
             case "Payment":
-                showEle(301,302,303,304,305,306,3010);
+                showEle(301,302,303,304,305,105,3010);
                 document.getElementById("301").value = rowData.ttype || "";
                 document.getElementById("302").value = rowData.date || "";
                 document.getElementById("303").value = rowData.fparty || "";
                 document.getElementById("304").value = rowData.tparty || "";
                 document.getElementById("305").value = rowData.amt || "";
-                document.getElementById("306").value = rowData.nar || "";
+                document.getElementById("105").value = rowData.nar || "";
                 break;
         }
         document.getElementById("301").disabled = true;
@@ -440,7 +437,7 @@
         } else if (document.getElementById("301").value === "Purchase") {
             attachDropdown(document.getElementById("303"), window.crdb_list);
             attachDropdown(document.getElementById("304"), window.pproduct_list);
-        } else if (document.getElementById("301").value === "Receipt" || document.getElementById("301").value === "Payment") {
+        } else if (document.getElementById("301").value === "Receipt" || document.getElementById("301").value === "Payment" || document.getElementById("301").value === "Expense") {
             attachDropdown(document.getElementById("303"), window.crdbcsbkang_list);
             attachDropdown(document.getElementById("304"), window.crdbcsbkangexp_list); 
         }
@@ -485,7 +482,7 @@
         const fparty = document.getElementById("303").value.trim();
         const tparty = document.getElementById("304").value.trim();
         const amt = parseFloat(document.getElementById("305").value.trim()) || 0;
-        const nar = document.getElementById("306").value.trim();
+        const nar = document.getElementById("105").value.trim();
         
         if (!ttype || !date || !fparty || !tparty || isNaN(amt) || amt <= 0) { alert("Please fill all required fields properly\nAmount must be a number > 0"); return ; }
         const tranData = {ttype, date, fparty, tparty, amt};
@@ -638,11 +635,11 @@
             <div class="flex justify-between px-3 py-1 text-white"><span>Opening Stock</span><span>${OpeningStock.toFixed(0)}</span></div>
             <div class="flex justify-between px-3 py-1 text-white"><span>Purchase</span><span>${totalPurchase.toFixed(0)}</span></div>
             <div class="flex justify-between px-3 py-1 text-white"><span>Expense</span><span>${totalExpense.toFixed(0)}</span></div>
-            <div class="flex justify-between px-3 py-1 text-white font-semibold"><span>Total (Op + Pur + Exp)</span><span>${debitTotal.toFixed(0)}</span></div>
+            <div class="flex justify-between px-3 py-1 text-yellow-500 font-semibold"><span>Total (Op + Pur + Exp)</span><span>${debitTotal.toFixed(0)}</span></div>
             <div class="flex justify-between px-3 py-1 text-white"><span>Sales</span><span>${totalSales.toFixed(0)}</span></div>
             <div class="flex justify-between px-3 py-1 text-white"><span>Closing Stock</span><span>${closingStock.toFixed(0)}</span></div>
-            <div class="flex justify-between px-3 py-1 text-white font-semibold"><span>Total (Sales + Clo)</span><span>${creditTotal.toFixed(0)}</span></div>
-            <div class="flex justify-between px-3 py-1 font-bold ${profit>=0 ? 'text-green-300' : 'text-red-300'}"><span>Profit / Loss</span><span>${profit.toFixed(0)}</span></div>
+            <div class="flex justify-between px-3 py-1 text-yellow-500 font-semibold"><span>Total (Sales + Clo)</span><span>${creditTotal.toFixed(0)}</span></div>
+            <div class="flex justify-between px-3 py-1 font-bold ${profit>=0 ? 'text-green-500' : 'text-red-500'}"><span>Profit / Loss</span><span>${profit.toFixed(0)}</span></div>
         `;
     };
 
