--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <button class="btnSV" title="View Daybook" onclick="insertTran(true, true, false)">📖</button>
 </div>
 <div id="plCont" class="hidden w-full max-w-md mt-[50px] flex items-center gap-2 p-1 rounded-lg shadow-xl">
-    <input id="clostk" type="number" placeholder="Enter Closing Stock" class="bg-transparent text-white border border-green-600 rounded px-2 h-10 inline-block" />
+    <input id="clostk" type="number" placeholder="Enter Closing Stock" class="w-[225px] bg-transparent text-white border border-green-600 rounded px-2 h-10 inline-block" />
     <button onclick="profit_loss()" title="view profit_loss" class="btnSV">⏳</button>
     <div id="plLabels" class="max-w-md mx-auto mt-4 border rounded-lg divide-y"></div>
 </div>
@@ -694,3 +694,4 @@
 </script>
 </body>
 </html>
+
